# GeekCurio_Print_Manager

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  smoke-test-m5.0.md  smoke-test-m5.2.md  smoke-test-m5.3.md
src/geekcurio_print_manager/: __main__.py  app.py  exceptions.py
src/geekcurio_print_manager/db/: database.py  schema.py
src/geekcurio_print_manager/exporters/: pdf_quote_export.py  quote_export.py  text_export.py
src/geekcurio_print_manager/gui/: history_widget.py  main_window.py
src/geekcurio_print_manager/models/: pricing_config.py  pricing_profile.py  print_job.py  quote.py  saved_quote.py
src/geekcurio_print_manager/parsers/: bambu_orca.py  base.py
src/geekcurio_print_manager/services/: inspection_service.py  quote_repository.py  quote_service.py
src/geekcurio_print_manager/ui/: console.py  pdf_quote_console.py  quote_console.py
src/geekcurio_print_manager/utils/: archive.py  formatting.py
tests/: conftest.py
tests/db/: test_schema.py
tests/exporters/: test_pdf_quote_export.py  test_quote_export.py  test_text_export.py
tests/fixtures/: slice_info_builder.py
tests/models/: test_pricing_config.py  test_pricing_profile.py  test_print_job.py
tests/parsers/: test_bambu_orca_parser.py
tests/services/: test_inspection_service.py  test_quote_repository.py  test_quote_service.py
tests/ui/: test_pdf_quote_console.py
tests/utils/: test_formatting.py
