[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "geekcurio-print-manager"
version = "0.1.0"
description = "Automates the administrative side of GeekCurio's 3D printing workflow."
requires-python = ">=3.13"
readme = "README.md"
dependencies = ["platformdirs>=4.0", "fpdf2>=2.7.0"]

[project.scripts]
geekcurio-print-manager = "geekcurio_print_manager.app:main"
geekcurio-quote = "geekcurio_print_manager.app:quote_main"
geekcurio-quote-pdf = "geekcurio_print_manager.app:pdf_quote_main"

[tool.setuptools.packages.find]
where = ["src"]
